test/static/wrong/shadow4.kk
// combination of warning and error used to display incorrectly
function foo(x) { val x = 2; x + True }